Added course description section

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -47,6 +47,30 @@
     "  * The classroom is unlocked during the class\n",
     "  * Proximity card access required other times\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Course description\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "This course covers basics of fMRI data processing and analysis. Due to the sheer amount of data, fMRI data analysis requires a number of tools to process data (pre-processing) and to perform statistical inference. I will introduce you to the tools necessary for fMRI data analysis. We will cover:\n",
+    "\n",
+    "* **Python coding**: Knowing some Python enables you to script to automate some aspects of fMRI data analysis. Also, Python is becoming a *lingua franca* in scientific computing (along with R and MATLAB).\n",
+    "* **Pre-processing steps**: You can't analyze fMRI data coming out of an MRI scanner. There are necessary steps to prepare your data. You will learn why we do what we do in pre-processing fMRI data.\n",
+    "* **Statistical methods, temporal & spatial**: Because fMRI data contains a series of 3D images, you need special statistical methods to analyze such data.\n",
+    "* **Cool new stuff**: Machine learning (dimension reduction, clustering, classification) has been applied to fMRI data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Course resources\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -65,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
