Course materials section done

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -69,8 +69,111 @@
    "source": [
     "# Course resources\n",
     "<hr style=\"height:1px;border:none\" />\n",
-    "\n"
+    "\n",
+    "## Required\n",
+    "\n",
+    "### Textbook\n",
+    "\n",
+    "> Poldrack, R. A., Mumford J. A., & Nichols T. E. <br>\n",
+    "> ***Handbook of Functional MRI Analysis***. <br>\n",
+    "> Cambridge University Press, 2011\n",
+    ">\n",
+    "> *Electronic version (ProQuest Ebook Central) can be viewed through the UT Library, with some restrictions on downloading.* \n",
+    "\n",
+    "\n",
+    "### Hardware\n",
+    "\n",
+    "\n",
+    "***Computer***: \n",
+    "* A computer capable of processing neuroimaging data is required. \n",
+    "* Your own computer (laptop or desktop), or iMac in classroom\n",
+    "* I recommend 4GB per CPU core\n",
+    "\n",
+    "***Data storage***: \n",
+    "* For data & software (Docker images).\n",
+    "* At least 30GB recommended\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Software\n",
+    "***NB:*** *The instructor is unable to answer any questions or issues related to software installation during the class. If you need any assistance regarding software installation or issues, consult with the instructor during office hours.*\n",
+    "\n",
+    "\n",
+    "***Docker***: Docker is similar to a virtual machine (a computer inside your computer), but is much simpler and requiring far less resources to run than a virtual machine. \n",
+    "\n",
+    "***Docker image***: \n",
+    "* Docker images called **`sathayas/python-fsl-bundle`** (~3GB) is available from the Docker Hub web site. \n",
+    "* It includes Python 3 (and all necessary libraries), FSL (brain image analysis software tool), FSLEyes and MRICron (both are image viewer software tools).\n",
+    "\n",
+    "\n",
+    "***Installation instructions on Docker and Docker image will be covered during the first class.***\n",
+    "\n",
+    " "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional Resources\n",
+    "\n",
+    "### Optional textbook\n",
+    "\n",
+    "> Al Sweigart. <br>\n",
+    "> Automate the Boring Stuff with Python: Practical Programming for Total Beginners. <br>\n",
+    "> No Starch Press (2015)\n",
+    ">\n",
+    "> For those who have never used Python before. *Electronic version can be viewed via the Author's web site.* \n",
+    "\n",
+    "\n",
+    "### Software\n",
+    "\n",
+    "***Git***: Git enables you to clone (or copy) codes, notes, and some data associated with this class from GitHub. \n",
+    "* Git is already pre-installed on Mac. \n",
+    "* For Windows users, you can download from its website (https://git-scm.com/downloads). \n",
+    "\n",
+    "***Use of Git (and GitHub) is explained in a separate document***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Course materials\n",
+    "\n",
+    "### Course notes\n",
+    "Course notes are in Jupyter Notebook format, and available from the instructor’s\n",
+    "GitHub repository at https://github.com/sathayas/JupyterfMRIFall2019. You can clone this repository by\n",
+    "```\n",
+    "git clone https://github.com/sathayas/JupyterfMRIFall2019 Notes\n",
+    "```\n",
+    "and contents of this repository is cloned on your computer under the newly created directory **`Notes`**.\n",
+    "\n",
+    "\n",
+    "### Reading materials\n",
+    "Unfortunately, I cannot post PDF journal articles on GitHub due to copyrights. They will be available via Canvas.\n",
+    "\n",
+    "\n",
+    "### Codes\n",
+    "Some example codes used during the class, as well as some sample solutions for in-class\n",
+    "exercises and homework assignments, will be available on GitHub at [URL to be added]. You can clone this repository by\n",
+    "```\n",
+    "git clone [URL to be added] Codes\n",
+    "```\n",
+    "and contents of this repository is cloned on your computer under the newly created directory **`Codes`**.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Data\n",
+    "Data sets used in this class are publicly available data sets on the web. A link for each data set is provided in the course note. *Students are responsible for downloading the data set(s) to their computer before the class.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
