Grading section is done

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -169,6 +169,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Grading\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "## Homework assignments (30 points)\n",
+    "* Three homework assignments throughout the semester\n",
+    "* Each is worth 10 points\n",
+    "\n",
+    "\n",
+    "## Chapter / Journal Presentation (40 points)\n",
+    "Each student will present a chapter from the textbook (20 points), and a journal article (20 points). Journal club-style informal presentation & discussion. Each presentation & discussion should be ~45 min.\n",
+    "  * **Summarizing the materials**: Summary of the method / technique presented in the chapter or paper\n",
+    "  * **Critical review of the paper** (for journal presentation only): Strengths / weaknesses of the paper\n",
+    "\n",
+    "Sign-up on this web site [URL to be added].\n",
+    "\n",
+    "* Papers\n",
+    "  * Suggested by the instructor\n",
+    "  * Or chosen by a student, with an approval from the instructor\n",
+    "  * Distributed via Canvas the week before\n",
+    "  * Everybody is expected to have read the paper\n",
+    "* Peer evaluation\n",
+    "  * Online evaluation -- everybody (except the presenter) fills out\n",
+    "  * Open peer review -- presenter knows who wrote the review\n",
+    "  * All students must turn in the review -- the instructor will remind those who haven't turned in the review.\n",
+    "  \n",
+    "  \n",
+    "## Final project (20 points)\n",
+    "* Group project with 2-3 students\n",
+    "* Processing and/or analysis of fMRI data\n",
+    "* Two class periods\n",
+    "   * Day 1: Get together, brainstorming, analysis\n",
+    "   * Day 2: Presentation\n",
+    "   \n",
+    "   \n",
+    "## Attendance (10 points)\n",
+    "* Attendance is mandatory\n",
+    "* If you are unable to attend, you have to be late, or you have to leave early on a **legitimate reason** (e.g., family emergency, illness, jury duty, ongoing research commitment that cannot be rescheduled, etc.) \n",
+    "  * Please notify me, ideally BEFORE the class\n",
+    "* Unexcused\n",
+    "  * absence: -2 points per occurrence\n",
+    "  * tardiness (20+ min): -1 points per occurrence\n",
+    "  * early departure (20+ min): -1 points per occurrence\n",
+    "  \n",
+    "  \n",
+    "## In-Class Exercise Presentations (Extra points)\n",
+    "* Present your solution to in-class exercises. \n",
+    "* Post your code on Canvas and the instructor will choose a presenter among all posted solutions. \n",
+    "* Students will earn 0.5 point per presentation if selected to present. \n",
+    "* All extra points earned during the semester will be added toward your final grade. \n",
+    "\n",
+    "***Note that you will not earn points just by posting your code on Canvas; you have to be selected to present your code to earn points.***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
