All sections are done

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -226,11 +226,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Policies\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "## Auditing\n",
+    "From the syllabus:\n",
+    "\n",
+    "> Those who are interested in auditing this class may do so by requesting a permission from the instructor BEFORE attending the class. The instructor may grant access to Canvas for those auditing the class. The instructor reserves the right to revoke the permission to audit when a person auditing the class is deemed disruptive to the class (e.g., asking many questions not directly related to the class, engaging in activities unrelated to the class). The instructor will not grade homework or any other assignments completed by auditors.\n",
+    "> \n",
+    "> If you are a graduate student, I ask you to register for the class rather than auditing. This is because a low number of student enrollment will result in cancellation of the class.\n",
+    "\n",
+    "\n",
+    "## Late assignments\n",
+    "If there is an extenuating circumstance (e.g., health problems, family emergencies, etc.) to prevent you from submitting a homework assignment, to avoid reduced points, please ask the instructor’s permission for a late submission BEFORE the deadline. Otherwise, points will be deducted depending on how late it is. See the syllabus for more details.\n",
+    "\n",
+    "\n",
+    "## Group Submissions\n",
+    "Students may work together on a homework assignment. Each student is still responsible for submitting his/her homework assignment individually on Canvas. If you work with others on a homework assignment, please comment whom you worked with. When students are working together, their group size may not exceed 3.\n",
+    "\n",
+    "\n",
+    "## Academic Integrity\n",
+    "## Students with Disabilities and Different Learning Styles\n",
+    "## Preferred Names & Gender Pronouns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Course schedule\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "Please consult the [latest syllabus](https://nbviewer.jupyter.org/github/sathayas/JupyterfMRIFall2019/blob/master/Syllabus/Syllabus_fMRI_Fall2019.ipynb) for most up-to-date course schedule. "
+   ]
   }
  ],
  "metadata": {
