Up to pulling Docker image

--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:center\">\n",
-    "PSY 394U <b>Data Analytics with Python</b>, Spring 2019\n",
+    "<p style='text-align:center'>\n",
+    "PSY 394U <b>Methods for fMRI</b>, Fall 2019\n",
     "\n",
     "\n",
-    "<img style=\"width: 700px; padding: 0px;\" src=\"https://github.com/sathayas/JupyterAnalyticsSpring2019/blob/master/Images/Banner.png?raw=true\" alt=\"title pics\"/>\n",
+    "<img style='width: 300px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2019/blob/master/Images/Placebo_Left.png?raw=true' alt='brain blobs'/>\n",
     "\n",
     "</p>\n",
     "\n",
     "<p style=\"text-align:center; font-size:40px; margin-bottom: 30px;\"><b>Docker and Docker Image</b></p>\n",
     "\n",
-    "<p style=\"text-align:center; font-size:18px; margin-bottom: 32px;\"><b>January 22, 2019</b></p>\n",
+    "<p style=\"text-align:center; font-size:18px; margin-bottom: 32px;\"><b>September 9, 2019</b></p>\n",
     "\n",
     "<hr style=\"height:5px;border:none\" />"
    ]
@@ -23,6 +23,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# What is Docker and why should I use it?\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
     "**Docker** is a software tool that lets you run a collection of software packages and libraries, known as a Docker image, as if you are running a virtual machine (a computer inside your computer). A **Docker image** is self-contained, so you do not have to do any complicated installation processes (except Docker)."
    ]
   },
@@ -43,7 +46,7 @@
     "  * [Docker Toolbox for Windows](https://docs.docker.com/toolbox/toolbox_install_windows/)\n",
     "  * [Docker Toolbox for Mac](https://docs.docker.com/toolbox/toolbox_install_mac/)\n",
     "\n",
-    "Once Docker is installed on your computer, you can run docker commands on a bash-style shell (i.e., Linux-style terminal), most likely via the Command Prompt (Windows) or the Terminal (Mac). See the corresponding documentation from the links above. To test the installation, run the following command:\n",
+    "Once Docker is installed on your computer, ***you can run docker commands on a bash-style shell (i.e., Linux-style terminal)***, most likely via the Command Prompt (Windows) or the Terminal (Mac). See the corresponding documentation from the links above. To test the installation, run the following command:\n",
     "```\n",
     "docker run hello-world\n",
     "```\n",
@@ -75,9 +78,33 @@
     "# Getting the Docker image\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
-    "Now that Docker is installed on your computer, you are ready to download a **Docker image**. A Docker image is a bundle of software packages and libraries. Thanks to Docker, installing these software tools and libraries is a breeze! Simply run the following command:\n",
+    "## Contents of the Docker image\n",
+    "Now that Docker is installed on your computer, you are ready to download a **Docker image**. A Docker image is a bundle of software packages and libraries. Thanks to Docker, installing these software tools and libraries is a breeze! The Docker image available here, **`sathayas/python-fsl-bundle`** (2.7GB), contains FSL (a neuroimaging data analysis tool) and Python 3. Also contained are the following software packages:\n",
+    "* **Graphviz**: A network visualization software package\n",
+    "* **MRIcron**: A brain image viewing tool\n",
+    "* **FSLeyes**: Another brain image viewing tools (developed by FSL). Allows viewing of 4D images.\n",
+    " \n",
+    "Just FYI, this docker image contains the following Python libraries:\n",
+    "  * Numpy\n",
+    "  * Scipy\n",
+    "  * Matplotlib\n",
+    "  * Pandas\n",
+    "  * IPython\n",
+    "  * Jupyter\n",
+    "  * networkX\n",
+    "  * Python-Louvain\n",
+    "  * Graphviz\n",
+    "  * Nibabel\n",
+    "  * Nipype\n",
+    "  * PyBIDS\n",
+    "  * Nilearn\n",
+    "  * Scikit-learn\n",
+    "  * Scikit-image\n",
+    "\n",
+    "## Pulling the Docker image\n",
+    "To install a Docker image, simply run the following command:\n",
     "```\n",
-    "docker pull sathayas/python-analytics-bundle\n",
+    "docker pull sathayas/python-fsl-bundle\n",
     "```\n",
     "To verify if the Docker image has been correctly downloaded, run the following command:\n",
     "```\n",
@@ -85,24 +112,9 @@
     "```\n",
     "Then you should see an output like this:\n",
     "```\n",
-    "REPOSITORY                         TAG                 IMAGE ID            CREATED             SIZE\n",
-    "sathayas/python-analytics-bundle   latest              38f218e7f21b        2 days ago          1.52GB\n",
+    "REPOSITORY                       TAG                 IMAGE ID            CREATED             SIZE\n",
+    "sathayas/python-fsl-bundle       latest              85ab7ee15add        17 minutes ago      2.7GB\n",
     "```\n",
-    "\n",
-    "Just FYI, this docker image `sathayas/python-analytics-bundle` contains the following:\n",
-    "* Python 3.7 and the following libraries:\n",
-    "  * Numpy\n",
-    "  * Scipy\n",
-    "  * Matplotlib\n",
-    "  * Pandas\n",
-    "  * IPython\n",
-    "  * Jupyter\n",
-    "  * Scikit-learn\n",
-    "  * networkX\n",
-    "  * NLTK\n",
-    "  * Wordcloud\n",
-    "  * Graphviz\n",
-    "* Graphviz -- a network visualization software pacakge\n",
     "\n"
    ]
   },
@@ -200,7 +212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
