git pull command is explained

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -147,7 +147,10 @@
     "```\n",
     "git clone https://github.com/sathayas/JupyterfMRIFall2019 Notes\n",
     "```\n",
-    "and contents of this repository is cloned on your computer under the newly created directory **`Notes`**.\n",
+    "and contents of this repository is cloned on your computer under the newly created directory **`Notes`**. To download any updates to the nodes, you just run the following command in the `Notes` directory on your computer:\n",
+    "```\n",
+    "git pull\n",
+    "```\n",
     "\n",
     "\n",
     "### Reading materials\n",
@@ -160,7 +163,7 @@
     "```\n",
     "git clone [URL to be added] Codes\n",
     "```\n",
-    "and contents of this repository is cloned on your computer under the newly created directory **`Codes`**.\n",
+    "and contents of this repository is cloned on your computer under the newly created directory **`Codes`**. You can update this documents by running `git pull` in the `Codes` directory as explained above.\n",
     "\n",
     "\n",
     "\n",
