Linux command section is done

--- a/BasicPython.ipynb
+++ b/BasicPython.ipynb
@@ -5,18 +5,39 @@
    "metadata": {},
    "source": [
     "<p style='text-align:center'>\n",
-    "PSY 394U <b>Methods for fMRI</b>, Fall 2018\n",
+    "PSY 394U <b>Methods for fMRI</b>, Fall 2019\n",
     "\n",
     "\n",
-    "<img style='width: 300px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2018/blob/master/Images/Placebo_Left.png?raw=true' alt='brain blobs'/>\n",
+    "<img style='width: 300px; padding: 0px;' src='https://github.com/sathayas/JupyterfMRIFall2019/blob/master/Images/Placebo_Left.png?raw=true' alt='brain blobs'/>\n",
     "\n",
     "</p>\n",
     "\n",
+    "\n",
     "<p style='text-align:center; font-size:40px; margin-bottom: 30px;'><b>Basics of Python coding</b></p>\n",
     "\n",
-    "<p style='text-align:center; font-size:18px; margin-bottom: 32px;'><b>September 10 - 17, 2018</b></p>\n",
+    "<p style='text-align:center; font-size:18px; margin-bottom: 32px;'><b>September 9, 2019</b></p>\n",
     "\n",
     "<hr style='height:5px;border:none' />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Outline\n",
+    "\n",
+    "**In this tutorial:**\n",
+    "* Basic unix commands\n",
+    "* Operators (number & string)\n",
+    "* Variables & lists\n",
+    "* Flow control (if, while)\n",
+    "* For loop\n",
+    "* Dictionary\n",
+    "\n",
+    "**In the next tutorial:**\n",
+    "* Arrays\n",
+    "* Data frame\n",
+    "* NIfTI format"
    ]
   },
   {
@@ -26,11 +47,7 @@
     "# Essential Unix commands\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
-    "Before we get started with Python coding, I thought it is a good idea to learn a few essential Unix commands. Many coding tools and some software tools for neuroimaging can be interfaced by using Unix commands from a terminal. Although Unix is completely replaced by Linux, you can still use essential Unix commands on Linux and Mac OS to accomplish various operations (copying files, moving files, creating directories, etc.). So knowing a few Unix commands can be a useful asset.\n",
-    "\n",
-    "For this exercise, please open a terminal (for Mac and Linux users). \n",
-    "\n",
-    "*If you are using a **Windows** computer, I highly recommend installing a Unix-like virtual machine (VM) on your computer. There is a distribution of VM called FSLvm from FSL (https://fsl.fmrib.ox.ac.uk/fsl/fslwiki/FslInstallation/Windows). You can follow its installation instructions.*"
+    "Before we get started with Python coding, I thought it is a good idea to learn a few essential Unix commands. Many coding tools and some software tools for neuroimaging can be interfaced by using Unix commands from a terminal. Although Unix is completely replaced by Linux, you can still use essential Unix commands on Linux and Mac OS to accomplish various operations (copying files, moving files, creating directories, etc.). So knowing a few Unix commands can be a useful asset."
    ]
   },
   {
@@ -74,54 +91,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 0\r\n",
-      "drwxrwxr-x@  3 sh45474  2066930642   102 Oct 10  2016 \u001b[34mCreative Cloud Files\u001b[m\u001b[m\r\n",
-      "drwx------+  4 sh45474  2066930642   136 Jun 29 14:23 \u001b[34mDesktop\u001b[m\u001b[m\r\n",
-      "drwx------+ 11 sh45474  2066930642   374 Dec  4  2017 \u001b[34mDocuments\u001b[m\u001b[m\r\n",
-      "drwx------+ 11 sh45474  2066930642   374 Jul  2 22:31 \u001b[34mDownloads\u001b[m\u001b[m\r\n",
-      "drwx------@ 61 sh45474  2066930642  2074 Sep 14  2017 \u001b[34mLibrary\u001b[m\u001b[m\r\n",
-      "drwx------+  3 sh45474  2066930642   102 Mar 23  2016 \u001b[34mMovies\u001b[m\u001b[m\r\n",
-      "drwx------+  4 sh45474  2066930642   136 Apr  1  2016 \u001b[34mMusic\u001b[m\u001b[m\r\n",
-      "drwx------+  7 sh45474  2066930642   238 Aug 19  2016 \u001b[34mPictures\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x+  5 sh45474  2066930642   170 Mar 23  2016 \u001b[34mPublic\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x   5 sh45474  2066930642   170 Mar 14  2017 \u001b[34mSoftwareTools\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x   9 sh45474  2066930642   306 Apr 11 12:27 \u001b[34mnltk_data\u001b[m\u001b[m\r\n",
-      "drwxr-xr-x   3 sh45474  2066930642   102 Apr 25 21:42 \u001b[34mscikit_learn_data\u001b[m\u001b[m\r\n"
+      "total 116\r\n",
+      "drwxr-xr-x 1 1000 staff    68 Jun 24 19:53 Codes\r\n",
+      "-rw-r--r-- 1 root root   1746 Jun  3 08:03 Dockerfile\r\n",
+      "-rw-r--r-- 1 root root    124 Jan 25 19:46 FSLDir.sh\r\n",
+      "drwxr-xr-x 1 1000 staff   442 Jun 24 20:55 Notes\r\n",
+      "-rw-r--r-- 1 root root     92 Jan 25 18:34 docker_command\r\n",
+      "-rw-r--r-- 1 root root  97072 Jan  4 11:47 fslinstaller.py\r\n",
+      "-rw-r--r-- 1 root root    135 Jun  3 14:09 requirements.txt\r\n",
+      "-rw-r--r-- 1 root root    126 May 31 20:37 sources\r\n"
      ]
     }
    ],
    "source": [
-    "!ls -l ~"
+    "!ls -l /tmp"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here I put a tilde (**`~`**) after `ls -l`. This is a shorthand notation of your home directory. If you run `ls -l` on Jupyter without a tilde, you will be a print out of the content of where your Jupyter notebook document is stored."
+    "Here I put **`/tmp`** after `ls -l`. This produces the content of `/tmp` directory on your Docker. If you run `ls -l` on Jupyter, you will be a print out of the content of where your Jupyter notebook document is stored."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 72\r\n",
-      "-rw-r--r--   1 sh45474  2066930642   5731 Jul 12 13:25 BasicPython.ipynb\r\n",
-      "drwxr-xr-x  15 sh45474  2066930642    510 Jul 11 15:46 \u001b[34mImages\u001b[m\u001b[m\r\n",
-      "-rw-r--r--   1 sh45474  2066930642  23219 Jul 12 12:57 Intro.ipynb\r\n",
-      "-rw-r--r--   1 sh45474  2066930642    204 Jul 11 16:09 README.md\r\n"
+      "total 112\r\n",
+      "-rw-r--r-- 1 1000 staff 63042 Jun 24 20:55 BasicPython.ipynb\r\n",
+      "-rw-r--r-- 1 1000 staff 12047 Jun 24 20:11 Docker.ipynb\r\n",
+      "drwxr-xr-x 1 1000 staff   306 Jun 24 20:00 Images\r\n",
+      "-rw-r--r-- 1 1000 staff 12597 Jun 24 20:11 Intro.ipynb\r\n",
+      "-rw-r--r-- 1 1000 staff 10138 Jun 24 20:37 Jupyter.ipynb\r\n",
+      "-rw-r--r-- 1 1000 staff   986 Jun 24 20:07 README.md\r\n",
+      "drwxr-xr-x 1 1000 staff   136 Jun 18 18:59 Syllabus\r\n",
+      "-rw-r--r-- 1 1000 staff   338 Jun 24 19:50 docker_command\r\n"
      ]
     }
    ],
@@ -134,29 +151,63 @@
    "metadata": {},
    "source": [
     "## `mkdir` command\n",
-    "You can create a directory with the **`mkdir`** command, followed by the name of the directory. Say, I want to create a directory called **`fMRI_stuff`** under my home directory, I can type\n",
-    "```\n",
-    "mkdir fMRI_stuff\n",
-    "```\n",
-    "Just to verify whether it was actually created, I run `ls -l` again.\n",
-    "```\n",
-    "PSYC-A06168:~ sh45474$ ls -l\n",
-    "total 0\n",
-    "drwxrwxr-x@  3 sh45474  2066930642   102 Oct 10  2016 Creative Cloud Files\n",
-    "drwx------+  4 sh45474  2066930642   136 Jun 29 14:23 Desktop\n",
-    "drwx------+ 11 sh45474  2066930642   374 Dec  4  2017 Documents\n",
-    "drwx------+ 11 sh45474  2066930642   374 Jul  2 22:31 Downloads\n",
-    "drwx------@ 61 sh45474  2066930642  2074 Sep 14  2017 Library\n",
-    "drwx------+  3 sh45474  2066930642   102 Mar 23  2016 Movies\n",
-    "drwx------+  4 sh45474  2066930642   136 Apr  1  2016 Music\n",
-    "drwx------+  7 sh45474  2066930642   238 Aug 19  2016 Pictures\n",
-    "drwxr-xr-x+  5 sh45474  2066930642   170 Mar 23  2016 Public\n",
-    "drwxr-xr-x   5 sh45474  2066930642   170 Mar 14  2017 SoftwareTools\n",
-    "drwxr-xr-x   2 sh45474  2066930642    68 Jul 12 13:32 fMRI_stuff\n",
-    "drwxr-xr-x   9 sh45474  2066930642   306 Apr 11 12:27 nltk_data\n",
-    "drwxr-xr-x   3 sh45474  2066930642   102 Apr 25 21:42 scikit_learn_data\n",
-    "```\n",
-    "\n",
+    "You can create a directory with the **`mkdir`** command, followed by the name of the directory. Say, I want to create a directory called **`fMRI_stuff`** under my home directory, I can type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory 'fMRI_stuff': File exists\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mkdir fMRI_stuff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just to verify whether it was actually created, I run `ls -l` again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 112\r\n",
+      "-rw-r--r-- 1 1000 staff 63420 Jun 24 20:57 BasicPython.ipynb\r\n",
+      "-rw-r--r-- 1 1000 staff 12047 Jun 24 20:11 Docker.ipynb\r\n",
+      "drwxr-xr-x 1 1000 staff   306 Jun 24 20:00 Images\r\n",
+      "-rw-r--r-- 1 1000 staff 12597 Jun 24 20:11 Intro.ipynb\r\n",
+      "-rw-r--r-- 1 1000 staff 10138 Jun 24 20:37 Jupyter.ipynb\r\n",
+      "-rw-r--r-- 1 1000 staff   986 Jun 24 20:07 README.md\r\n",
+      "drwxr-xr-x 1 1000 staff   136 Jun 18 18:59 Syllabus\r\n",
+      "-rw-r--r-- 1 1000 staff   338 Jun 24 19:50 docker_command\r\n",
+      "drwxr-xr-x 1 1000 staff    68 Jun 24 20:57 fMRI_stuff\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "And you can see it's there."
    ]
   },
@@ -242,29 +293,29 @@
     "<th style=\"text-align:left\">Syntax</th>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`cat`</td><td style=\"text-align:left\">Prints a text file on a screen</td><td style=\"text-align:left\">cat [file name]</td>\n",
+    "<td style=\"text-align:left\">cat</td><td style=\"text-align:left\">Prints a text file on a screen</td><td style=\"text-align:left\">cat [file name]</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`cp`</td><td style=\"text-align:left\">Copies a file or a directory</td><td style=\"text-align:left\">cp [original item] [copied item]</td>\n",
+    "<td style=\"text-align:left\">cp</td><td style=\"text-align:left\">Copies a file or a directory</td><td style=\"text-align:left\">cp [original item] [copied item]</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`gzip`</td><td style=\"text-align:left\">Compresses a file (.gz added)</td><td style=\"text-align:left\">gzip [file]</td>\n",
+    "<td style=\"text-align:left\">gzip</td><td style=\"text-align:left\">Compresses a file (.gz added)</td><td style=\"text-align:left\">gzip [file]</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`gzip -d `</td><td style=\"text-align:left\">Uncompresses a file (.gz removed)</td><td style=\"text-align:left\">gzip -d [file].gz</td>\n",
+    "<td style=\"text-align:left\">gzip -d </td><td style=\"text-align:left\">Uncompresses a file (.gz removed)</td><td style=\"text-align:left\">gzip -d [file].gz</td>\n",
     "</tr>\n",
     "\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`more`</td><td style=\"text-align:left\">Prints a text file on a screen (pagenated version)</td><td style=\"text-align:left\">more [file name]</td>\n",
+    "<td style=\"text-align:left\">more</td><td style=\"text-align:left\">Prints a text file on a screen (pagenated version)</td><td style=\"text-align:left\">more [file name]</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`mv`</td><td style=\"text-align:left\">Moves a file or a directory</td><td style=\"text-align:left\">mv [origin] [target]</td>\n",
+    "<td style=\"text-align:left\">mv</td><td style=\"text-align:left\">Moves a file or a directory</td><td style=\"text-align:left\">mv [origin] [target]</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`rm`</td><td style=\"text-align:left\">Deletes a file</td><td style=\"text-align:left\">rm [file name]</td>\n",
+    "<td style=\"text-align:left\">rm</td><td style=\"text-align:left\">Deletes a file</td><td style=\"text-align:left\">rm [file name]</td>\n",
     "</tr>\n",
     "<tr>\n",
-    "<td style=\"text-align:left\">`rmdir`</td><td style=\"text-align:left\">Deletes a directory</td><td style=\"text-align:left\">rmdir [directory name]</td>\n",
+    "<td style=\"text-align:left\">rmdir</td><td style=\"text-align:left\">Deletes a directory</td><td style=\"text-align:left\">rmdir [directory name]</td>\n",
     "</tr>\n",
     "</table>\n",
     "\n"
@@ -2511,7 +2562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
