Done up to For loop section

--- a/BasicPython.ipynb
+++ b/BasicPython.ipynb
@@ -2190,7 +2190,123 @@
    "source": [
     "## Application\n",
     "\n",
-    "For this demonstration, we shall use the **flanker task data** from OpenNeuro.org. You can download [here](https://openneuro.org/datasets/ds000102/versions/00001/download). You unzip the zip file and place it in your data directory. *Don't forget to mount the data directory on your Docker!*"
+    "For this demonstration, we shall use the **flanker task data** from OpenNeuro.org. You can download [here](https://openneuro.org/datasets/ds000102/versions/00001/download). You unzip the zip file and place it in your data directory. *Don't forget to mount the data directory on your Docker!* I recommend mapping it to **`/tmp/Data`** on your Docker image so that you can follow my notes.\n",
+    "\n",
+    "First, let's examine the content of this data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "dataDir = '/tmp/Data'\n",
+    "listDirContents = os.listdir(dataDir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, the **`listdir()`** function under the **`os`** library generates a list of directory contents, files and directories. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['CHANGES', 'dataset_description.json', 'derivatives', 'participants.tsv', 'README', 'sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18', 'sub-19', 'sub-20', 'sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26', 'T1w.json', 'task-flanker_bold.json']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(listDirContents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Among these, anything that start with **`sub-`** are directories for subjects (with 2-digit IDs). Let's make a list of subject directories. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listSubj = []  # starting out as an empty list\n",
+    "for i in listDirContents:  # examining each element in listDirContents\n",
+    "    if 'sub-' in i:   # if 'sub-' is in the file name\n",
+    "        listSubj.append(i)  # added to the list with the .append() method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is the final product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18', 'sub-19', 'sub-20', 'sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(listSubj)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python also allows a shorthand notation of what I described above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listSubj2 = [i for i in listDirContents if 'sub-' in i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sub-01', 'sub-02', 'sub-03', 'sub-04', 'sub-05', 'sub-06', 'sub-07', 'sub-08', 'sub-09', 'sub-10', 'sub-11', 'sub-12', 'sub-13', 'sub-14', 'sub-15', 'sub-16', 'sub-17', 'sub-18', 'sub-19', 'sub-20', 'sub-21', 'sub-22', 'sub-23', 'sub-24', 'sub-25', 'sub-26']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(listSubj2)"
    ]
   },
   {
@@ -2198,17 +2314,8 @@
    "metadata": {},
    "source": [
     "### Exercise\n",
-    "1. **Rolling dice**. Assume you roll two dice, and calculate the sum of the resulting numbers. You want to make a list of all possible outcomes. For example,\n",
-    "```\n",
-    "(1, 1) = 2\n",
-    "(1, 2) = 3\n",
-    ". . .\n",
-    "(1, 6) = 7\n",
-    "(2, 2) = 4\n",
-    "(2, 3) = 5\n",
-    ". . .\n",
-    "```\n",
-    "and so on. In your table, you don't have to list redundant outcomes. For example, you don't list (5, 2) = 7, since this is already represented by (2, 5) = 7."
+    "\n",
+    "**Not subject directory**: Create a list of files and directories in the flanker data directory that don't start with `sub-`."
    ]
   },
   {
